# delean-batch-manager

./: .env  .gitignore  LICENSE  README.md  deleanbm.py  pyproject.toml  requirements.txt
examples/: README.md
rubrics/: AS.txt  AT.txt  CEc.txt  CEe.txt  CL.txt  KNa.txt  KNc.txt  KNf.txt  KNn.txt  KNs.txt  MCr.txt  MCt.txt  MCu.txt  MS.txt  QLl.txt  QLq.txt  SNs.txt  VO.txt
runs/run_sample10/: ManagerFile.yaml  batch_id_map.json  summary.txt
runs/run_sample10/AS/: input.jsonl
runs/run_sample10/AT/: batch_metadata.json  input.jsonl
runs/run_sample10/CEc/: input.jsonl
runs/run_sample10/CEe/: input.jsonl
runs/run_sample10/CL/: input.jsonl
runs/run_sample10/KNa/: input.jsonl
runs/run_sample10/KNc/: input.jsonl
runs/run_sample10/KNf/: input.jsonl
runs/run_sample10/KNn/: input.jsonl
runs/run_sample10/KNs/: batch_metadata.json  input.jsonl  output.jsonl  summary.txt
runs/run_sample10/MCr/: input.jsonl
runs/run_sample10/MCt/: input.jsonl
runs/run_sample10/MCu/: input.jsonl
runs/run_sample10/MS/: input.jsonl
runs/run_sample10/QLl/: input.jsonl
runs/run_sample10/QLq/: input.jsonl
runs/run_sample10/SNs/: input.jsonl
runs/run_sample10/VO/: batch_metadata.json  input.jsonl  output.jsonl  summary.txt
runs/run_sample10/annotations/: sample10_annotations.csv  sample10_annotations.jsonl
src/: requirements.txt  utils.py
src/batching/: files.py  jobs.py  pricing.py  summary.py  utils.py
src/delean_batch_manager/: __init__.py
src/delean_batch_manager/cli/: __init__.py  __main__.py  cli.py  utils.py
src/delean_batch_manager/core/: __init__.py
src/delean_batch_manager/core/batching/: __init__.py  files.py  jobs.py  manager.py  parse.py  pricing.py  summary.py  utils.py
src/delean_batch_manager/core/utils/: __init__.py  clients.py  datasource.py  environment.py  misc.py  registry.py  rubrics.py
src/wrappers/: cli.py  manager.py  utils.py
